# django-geoposition-field

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
django_geoposition_field/: __init__.py  fields.py  forms.py  widgets.py
django_geoposition_field/static/geoposition/: geoposition.css  geoposition.js
tests/: models.py  settings.py  tests.py  urls.py
